--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@
 .toolbar {
   position: relative;
   width: 375px;
-  height: 5500px;
+  height: 3500px;
   display: flex;
   flex-direction: column;
   background: url("images/Background.svg");
@@ -25,11 +25,10 @@
   font-size: 20px;
   position: absolute;
   left: 30px;
-  right: 0;
-  top: 44px;
+  top: 10px;
   bottom: 0;
   width: 375px;
-  height: 44px;
+  height: 40px;
   overflow: hidden;
 }
 
@@ -44,7 +43,7 @@
   height: 50px;
   order: 3;
   font-size: 20px;
-  margin-top: 30px;
+  margin-top: 10px;
 }
 
 a {
@@ -365,7 +364,7 @@ h4 {
   align-items: center;
   padding: 0;
   gap: 8px;
-  width: 300px;
+  width: 305px;
   height: 32px;
   flex: none;
   order: 1;
@@ -373,7 +372,7 @@ h4 {
 }
 
 .actions {
-  width: 305px;
+  width: 22%;
   height: 20px;
   flex: none;
   order: 2;
@@ -385,7 +384,6 @@ h4 {
   flex-direction: row;
   align-items: center;
   padding: 8px 12px;
-  width: 103px;
   height: 32px;
   background: #ebf0ee;
   border-radius: 4px;
@@ -1177,4 +1175,321 @@ button {
 #email:hover,
 #msg:hover {
   border: 2px solid blue;
+}
+
+
+
+@media only screen and (min-width: 768px){
+  .toolbar {
+    width: 100%;
+    height: 100%;
+  }
+
+  .nav-menu {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    left: 0;
+  }
+
+  .menu-item{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 10px 12px;
+    gap: 10px;
+    width: 220px;
+    height: 40px;
+    flex: none;
+    order: 0;
+    flex-grow: 0;
+    text-align: center;
+    margin-left: 500px;
+  }
+
+  .menu-lists {
+    width: 63px;
+    height: 20px;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 15px;
+    line-height: 20px;
+    align-items: center;
+    text-align: center;
+    color: #344563;
+    flex: none;
+    order: 0;
+    flex-grow: 0;
+  }
+
+  .menu-icon {
+    right: 0px;
+  }
+
+  .headline {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 160px 0px;
+    gap: 24px;
+    position: absolute;
+    width: 80%;
+    height: 756px;
+    left: 260px;
+    top: 50px;
+    background-image: url(images/Header-background.svg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 20px 10px;
+  }
+
+  .primary-text {
+    width: 920px;
+    height: 50px;
+    margin-bottom: 30px;
+    margin-top: 30px;
+  }
+
+  .supporting-text {
+    width: 750px;
+    height: 70px;
+    margin-top: 30px;
+    text-align: center;
+    font-size: 20px;
+  }
+
+  .recent-works {
+    padding: 80px 0px;
+    gap: 48px;
+    position: absolute;
+    width: 90%;
+    height: 1185px;
+    left: 135px;
+    top: 820px;
+  }
+
+  .project-text {
+    width: 50%;
+    height: 48px;
+  }
+
+  .projects {
+    font-weight: 700;
+    font-size: 40px;
+    line-height: 52px;
+    width: 50%;
+  }
+
+  .indicator {
+    width: 200px;
+  }
+
+  .grid-work-row1 {
+    flex-direction: row;
+    padding: 4px 0px;
+    gap: 24px;
+    width: 90%;
+    height: 482px;
+  }
+  
+  .card-enable1 {
+    width: 33%;
+  }
+
+  .img-placeholder1 {
+    display: flex;
+    flex-direction: row;
+    width: 32%;
+    left: 0px;
+  }
+  
+  .img-placeholder2 {
+    display: flex;
+    flex-direction: row;
+    width: 32%;
+    left: 33%;
+    top: 220px;
+  }
+
+  .img-placeholder3 {
+    display: flex;
+    flex-direction: row;
+    width: 32%;
+    left: 66%;
+    top: 220px;
+  }
+
+  .img-placeholder4 {
+    display: flex;
+    flex-direction: row;
+    width: 32%;
+    left: 0;
+    top: 710px;
+  }
+
+  .img-placeholder5 {
+    display: flex;
+    flex-direction: row;
+    width: 32%;
+    left: 33%;
+    top: 710px;
+  }
+
+  .img-placeholder6 {
+    display: flex;
+    flex-direction: row;
+    width: 32%;
+    left: 66%;
+    top: 710px;
+  }
+
+  .project-title {
+    width: fit-content;
+  }
+
+  .project-name {
+    font-size: 32px;
+  }
+
+  .about-me {
+    padding: 80px 0px;
+    gap: 48px;
+    position: absolute;
+    width: 90%;
+    height: 780px;
+    left: 135px;
+    top: 2010px;
+  }
+
+  .information {
+    gap: 24px;
+    width: 80%;
+    height: 240px;
+  }
+
+  .aboutme-text {
+    width: 50%;
+    font-weight: 700;
+    font-size: 40px;
+    line-height: 52px;
+  }
+
+  .description-text {
+    width: 80%;
+    height: 48px;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 32px;
+    margin-top: 30px;
+  }
+
+  .get-mycv {
+    padding: 12px;
+    gap: 10px;
+    width: 159px;
+    height: 48px;
+    margin-top: 25px;
+  }
+
+  .lang-placeholder {
+    display: flex;
+    flex-direction: row;
+    width: 30%;
+    border: 1px solid teal;
+    left: 0px;
+  }
+
+  .frameworks-placeholder {
+    display: flex;
+    flex-direction: row;
+    width: 33%;
+    border: 1px solid teal;
+    left: 32%;
+    top: 420px;
+  }
+
+  .skills-placeholder {
+    display: flex;
+    flex-direction: row;
+    width: 33%;
+    border: 1px solid teal;
+    left: 67%;
+    top: 420px;
+  }
+
+  .card2 {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    padding: 80px 0px;
+    gap: 24px;
+    position: absolute;
+    width: 90%;
+    height: 400px;
+    left: 135px;
+    top: 2800px;
+  }
+
+  #contact-title {
+    padding: 0px;
+    gap: 24px;
+    width: 463px;
+    height: 256px;
+    font-size: 30px;
+  }
+
+  .contact-form {
+    align-items: flex-start;
+    padding: 0px;
+    gap: 24px;
+    width: 652px;
+    height: 150px;
+    top: 5px;
+    order: 0;
+  }
+
+  .contact-email {
+    margin-top: 10px;
+  }
+
+  .indicator-end {
+    top: 600px;
+  }
+
+  #name,
+  #email,
+  #msg {
+    width: 652px;
+  }
+
+  .bottom-nav {
+    display: flex;
+    flex-direction: row;
+    position: absolute;
+    width: 1440px;
+    height: 72px;
+  }
+
+  .bottom-social-media {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 0px;
+    position: absolute;
+    width: 1440px;
+    height: 40px;
+    left: 620px;
+    top: 3250px;
+  }
+
+  .footer {
+    display: flex;
+    flex-direction: column;
+    top: 2300px;
+    width: 200px;
+    height: 50px;
+    background-color: #36b37e;
+  }
+
 }
