--- a/styles.css
+++ b/styles.css
@@ -1177,9 +1177,7 @@ button {
   border: 2px solid blue;
 }
 
-
-
-@media only screen and (min-width: 768px){
+@media only screen and (min-width: 768px) {
   .toolbar {
     width: 100%;
     height: 100%;
@@ -1192,7 +1190,7 @@ button {
     left: 0;
   }
 
-  .menu-item{
+  .menu-item {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -1210,7 +1208,7 @@ button {
   .menu-lists {
     width: 63px;
     height: 20px;
-    font-family: 'Inter';
+    font-family: 'Inter', serif;
     font-style: normal;
     font-weight: 600;
     font-size: 15px;
@@ -1224,14 +1222,14 @@ button {
   }
 
   .menu-icon {
-    right: 0px;
+    right: 0;
   }
 
   .headline {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 160px 0px;
+    padding: 160px 0;
     gap: 24px;
     position: absolute;
     width: 80%;
@@ -1260,7 +1258,7 @@ button {
   }
 
   .recent-works {
-    padding: 80px 0px;
+    padding: 80px 0;
     gap: 48px;
     position: absolute;
     width: 90%;
@@ -1287,12 +1285,12 @@ button {
 
   .grid-work-row1 {
     flex-direction: row;
-    padding: 4px 0px;
+    padding: 4px 0;
     gap: 24px;
     width: 90%;
     height: 482px;
   }
-  
+
   .card-enable1 {
     width: 33%;
   }
@@ -1301,9 +1299,9 @@ button {
     display: flex;
     flex-direction: row;
     width: 32%;
-    left: 0px;
+    left: 0;
   }
-  
+
   .img-placeholder2 {
     display: flex;
     flex-direction: row;
@@ -1353,7 +1351,7 @@ button {
   }
 
   .about-me {
-    padding: 80px 0px;
+    padding: 80px 0;
     gap: 48px;
     position: absolute;
     width: 90%;
@@ -1397,7 +1395,7 @@ button {
     flex-direction: row;
     width: 30%;
     border: 1px solid teal;
-    left: 0px;
+    left: 0;
   }
 
   .frameworks-placeholder {
@@ -1422,7 +1420,7 @@ button {
     display: flex;
     flex-direction: row;
     align-items: flex-start;
-    padding: 80px 0px;
+    padding: 80px 0;
     gap: 24px;
     position: absolute;
     width: 90%;
@@ -1432,7 +1430,7 @@ button {
   }
 
   #contact-title {
-    padding: 0px;
+    padding: 0;
     gap: 24px;
     width: 463px;
     height: 256px;
@@ -1441,7 +1439,7 @@ button {
 
   .contact-form {
     align-items: flex-start;
-    padding: 0px;
+    padding: 0;
     gap: 24px;
     width: 652px;
     height: 150px;
@@ -1475,7 +1473,7 @@ button {
     display: flex;
     flex-direction: row;
     align-items: center;
-    padding: 0px;
+    padding: 0;
     position: absolute;
     width: 1440px;
     height: 40px;
@@ -1491,5 +1489,4 @@ button {
     height: 50px;
     background-color: #36b37e;
   }
-
 }
