--- a/desktopStyles.css
+++ b/desktopStyles.css
@@ -195,7 +195,7 @@ a:link {
   position: absolute;
   width: 40px;
   height: 40px;
-  left: calc(50% - 40px/ 2);
+  left: calc(50% - 40px / 2);
   bottom: 24px;
   background: #fff;
   border: 1px solid #dfe1e6;
@@ -356,7 +356,7 @@ a:link {
   bottom: 0;
 }
 
-#project-title {
+.project-title {
   width: 337px;
   height: 57px;
   font-family: 'Poppins', serif;
@@ -442,7 +442,7 @@ a:link {
   flex-grow: 0;
 }
 
-#item1 {
+.item1 {
   width: 100%;
   height: 100%;
   font-family: 'Inter', serif;
@@ -470,7 +470,7 @@ a:link {
   border-radius: 4px;
 }
 
-#button-text {
+.button-text {
   width: 100%;
   height: 24px;
   font-family: 'Inter', serif;
@@ -661,7 +661,7 @@ a:link {
   flex-grow: 0;
 }
 
-#item-text {
+.item-text {
   width: 100%;
   height: 16px;
   font-family: 'Inter', serif;
@@ -743,7 +743,7 @@ a:link {
 #email,
 #msg {
   top: calc(50% - 18px / 2);
-  font-family: 'Inter';
+  font-family: 'Inter', serif;
   font-style: normal;
   font-weight: 400;
   font-size: 15px;
