--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@
 
 .toolbar {
   position: relative;
-  width: 375px;
+  width: 100%;
   height: 3500px;
   display: flex;
   flex-direction: column;
@@ -21,15 +21,103 @@
 }
 
 .nav-menu {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
   align-items: center;
+  padding: 1rem 1.5rem;
+  border-bottom: 1px solid #36b37f;
+}
+
+.welcome {
+  margin-left: 5px;
+}
+
+ .menu-item {
+  display: block;
+  position: fixed;
+  top: 5rem;
+  flex-direction: column;
+  width: 100%;
+  height: 80px;
+  left: -100%;
+  border-radius: 10px;
+  transition: 0.3s;
+  box-shadow: 0 10px 27px rgba(0, 0, 0, 0.05);
+}
+
+.menu-item.active {
+  left: 0;
+  color: #3a4a42;
+  font-size: 12px;
+  font-weight: 600;
+  line-height: 44px;
+}
+
+.menu-lists {
+  height: 20px;
+  font-family: 'Inter', serif;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 48px;
+  line-height: 44px;
+  color: #3a4a42;
+  flex: none;
+  order: 0;
+  flex-grow: 0;
+  margin-bottom: 20px;
+}
+
+.menu-item li>a {
+  font-family: 'Inter', serif;
+  font-style: normal;
+  font-weight: 600;
   font-size: 20px;
+  line-height: 44px;
+  color: #3a4a42;
+}
+.nav-menu .icon {
+  display: block;
   position: absolute;
-  left: 30px;
-  top: 10px;
-  bottom: 0;
-  width: 375px;
-  height: 40px;
-  overflow: hidden;
+  right: 0;
+  top: 0;
+}
+
+.hamburger {
+  display: block;
+  cursor: pointer;
+}
+
+.hamburger.active .bar:nth-child(2) {
+  opacity: 0;
+}
+
+.hamburger.active .bar:nth-child(1) {
+  transform: translateY(8px) rotate(45deg);
+}
+
+.hamburger.active .bar:nth-child(3) {
+  transform: translateY(-8px) rotate(-45deg);
+}
+
+.bar {
+  display: block;
+  width: 25px;
+  height: 3px;
+  margin: 5px auto;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+  background-color: #101010;
+}
+
+.nav-link {
+  font-size: 1.6rem;
+  font-weight: 400;
+  color: #475569;
+}
+
+.nav-link:hover {
+  color: #482ff7;
 }
 
 .social-nav {
@@ -65,6 +153,10 @@ a:hover {
 
 .nav-menu a {
   color: black;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+  display: block;
 }
 
 .headline {
@@ -74,7 +166,7 @@ a:hover {
   padding: 64px 24px;
   gap: 58px;
   position: absolute;
-  width: 375px;
+  width: 95%;
   height: 726px;
   left: 0;
   top: 92px;
@@ -83,7 +175,7 @@ a:hover {
 .primary-text {
   display: flex;
   flex-direction: column;
-  width: 327px;
+  width: 90%;
   height: 162px;
   font-family: 'Inter', serif;
   font-style: normal;
@@ -109,7 +201,7 @@ h4 {
 }
 
 .supporting-text {
-  width: 327px;
+  width: 90%;
   height: 85px;
   font-family: 'Inter', serif;
   font-style: normal;
@@ -146,17 +238,8 @@ h4 {
   margin: 0 3px;
 }
 
-.menu-icon {
-  float: right;
-  top: 5px;
-}
-
 .menu-icon:hover {
   background-color: blueviolet;
-}
-
-.nav-menu .link-list {
-  display: none;
 }
 
 .nav-menu a .icon {
@@ -170,7 +253,7 @@ h4 {
   padding: 64px 24px;
   gap: 58px;
   position: absolute;
-  width: 379px;
+  width: 95%;
   height: 3283px;
   top: 708px;
   justify-items: center;
@@ -182,7 +265,7 @@ h4 {
   align-items: center;
   padding: 0;
   gap: 24px;
-  width: 327px;
+  width: 90%;
   height: 125px;
   flex: none;
   order: 0;
@@ -190,7 +273,7 @@ h4 {
 }
 
 .projects {
-  width: 327px;
+  width: 90%;
   height: 97px;
   font-family: 'Inter', serif;
   font-style: normal;
@@ -222,7 +305,7 @@ h4 {
   align-items: center;
   padding: 4px 2px;
   gap: 24px;
-  width: 331px;
+  width: 90%;
   height: 2972px;
   flex: none;
   order: 1;
@@ -237,7 +320,7 @@ h4 {
   bottom: 0;
   background: #ebf0ee;
   border-radius: 8px;
-  width: 327px;
+  width: 90%;
   height: 474px;
   order: 0;
   align-items: center;
@@ -252,7 +335,7 @@ h4 {
   bottom: 0;
   background: #ebf0ee;
   border-radius: 8px;
-  width: 327px;
+  width: 89%;
   height: 474px;
   order: 1;
 }
@@ -265,7 +348,7 @@ h4 {
   bottom: 0;
   background: #ebf0ee;
   border-radius: 8px;
-  width: 327px;
+  width: 89%;
   height: 474px;
   order: 1;
 }
@@ -278,7 +361,7 @@ h4 {
   bottom: 0;
   background: #ebf0ee;
   border-radius: 8px;
-  width: 327px;
+  width: 89%;
   height: 474px;
   order: 1;
 }
@@ -291,7 +374,7 @@ h4 {
   bottom: 0;
   background: #ebf0ee;
   border-radius: 8px;
-  width: 327px;
+  width: 89%;
   height: 474px;
   order: 1;
 }
@@ -304,13 +387,13 @@ h4 {
   bottom: 0;
   background: #ebf0ee;
   border-radius: 8px;
-  width: 327px;
+  width: 89%;
   height: 474px;
   order: 1;
 }
 
 .card-enable1 {
-  width: 327px;
+  width: 90%;
   height: 474px;
   flex: none;
   order: 0;
@@ -321,7 +404,7 @@ h4 {
 }
 
 .card-enable2 {
-  width: 327px;
+  width: 90%;
   height: 474px;
   flex: none;
   order: 1;
@@ -335,16 +418,16 @@ h4 {
   padding: 16px;
   gap: 16px;
   position: absolute;
-  width: 322px;
+  width: 100%;
   height: 222px;
   left: 0;
   bottom: 3px;
-  background: #fff;
+  background: white;
   border-radius: 8px;
 }
 
 .project-name {
-  width: 295px;
+  width: 90%;
   height: 57px;
   font-family: 'Inter', serif;
   font-style: normal;
@@ -363,7 +446,7 @@ h4 {
   align-items: center;
   padding: 0;
   gap: 8px;
-  width: 305px;
+  width: 85%;
   height: 32px;
   flex: none;
   order: 1;
@@ -534,7 +617,7 @@ h4 {
   padding: 64px 24px;
   gap: 58px;
   position: absolute;
-  width: 375px;
+  width: 95%;
   height: 1925px;
   left: 0;
   top: 3927px;
@@ -546,7 +629,7 @@ h4 {
   align-items: center;
   padding: 0;
   gap: 24px;
-  width: 351px;
+  width: 91%;
   height: 333px;
   flex: none;
   order: 0;
@@ -554,7 +637,7 @@ h4 {
 }
 
 .aboutme-text {
-  width: 351px;
+  width: 91%;
   height: 48px;
   font-family: 'Inter', serif;
   font-style: normal;
@@ -569,7 +652,7 @@ h4 {
 }
 
 .description-text {
-  width: 351px;
+  width: 91%;
   height: 189px;
   font-family: 'Inter', serif;
   font-style: normal;
@@ -626,7 +709,7 @@ h4 {
 }
 
 .card {
-  width: 327px;
+  width: 100%;
   height: 352px;
   flex: none;
   order: 0;
@@ -634,7 +717,7 @@ h4 {
 }
 
 .language-card {
-  width: 327px;
+  width: 100%;
   height: 352px;
   flex: none;
   order: 0;
@@ -651,7 +734,7 @@ h4 {
   background: #ebf0ee;
   border: 1px solid #c1c7d0;
   border-radius: 8px;
-  width: 327px;
+  width: 95%;
   height: 352px;
 }
 
@@ -714,7 +797,7 @@ h4 {
 }
 
 .frameworks-card {
-  width: 327px;
+  width: 95%;
   height: 352px;
   flex: none;
   order: 1;
@@ -731,12 +814,12 @@ h4 {
   background: #ebf0ee;
   border: 1px solid #c1c7d0;
   border-radius: 8px;
-  width: 327px;
+  width: 95%;
   height: 352px;
 }
 
 .skills-card {
-  width: 327px;
+  width: 95%;
   height: 352px;
   flex: none;
   order: 1;
@@ -753,7 +836,7 @@ h4 {
   background: #ebf0ee;
   border: 1px solid #c1c7d0;
   border-radius: 8px;
-  width: 327px;
+  width: 95%;
   height: 352px;
 }
 
@@ -1046,7 +1129,7 @@ h4 {
   padding: 64px 24px;
   gap: 58px;
   position: absolute;
-  width: 327px;
+  width: 95%;
   height: 1050px;
   top: 5450px;
   border-radius: 5px;
@@ -1063,7 +1146,7 @@ h4 {
   align-items: center;
   padding: 0;
   gap: 24px;
-  width: 327px;
+  width: 90%;
   height: 363px;
   flex: none;
   order: 0;
@@ -1079,7 +1162,7 @@ h4 {
 
 .contact-form {
   display: flex;
-  width: 327px;
+  width: 100%;
   height: 200px;
   flex-direction: column;
   padding: 0;
@@ -1094,7 +1177,7 @@ h4 {
 #name,
 #email,
 #msg {
-  width: 310px;
+  width: 85%;
   flex: none;
   flex-grow: 0;
   padding: 10px;
@@ -1124,7 +1207,7 @@ h4 {
 
 .msg {
   order: 2;
-  width: 310px;
+  width: 90%;
   border: rgb(rgb(255, 208, 0), green, blue);
 }
 
@@ -1141,7 +1224,7 @@ button {
 
 .contact-email {
   position: absolute;
-  width: 375px;
+  width: 90%;
   height: 90px;
   top: 860px;
   font-family: 'Inter', serif;
@@ -1180,7 +1263,7 @@ button {
   display: flex;
   flex-direction: row;
   position: absolute;
-  width: 327px;
+  width: 90%;
   height: 72px;
   justify-content: center;
   padding: 10px;
@@ -1195,25 +1278,38 @@ button {
   }
 
   .nav-menu {
-    width: 95%;
     display: flex;
     flex-direction: row;
-    left: 0;
+    justify-content: space-between;
+    padding: 0 10px;
+    align-items: center;
   }
 
   .menu-item {
     display: flex;
     flex-direction: row;
     align-items: center;
-    padding: 10px 12px;
-    gap: 10px;
-    width: 220px;
-    height: 40px;
-    flex: none;
-    order: 0;
-    flex-grow: 0;
-    text-align: center;
-    margin-left: 500px;
+    transition: none;
+    border-radius: 0;
+    left: 50%;
+    top: 0;
+    padding: 1rem 5rem;
+    height: fit-content;
+    width: fit-content;
+    margin-bottom: 0;
+  }
+
+  .menu-item li>a {
+    font-family: 'Inter', serif;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 20px;
+    color: #3a4a42;
+  }
+  
+  .hamburger {
+    display: none;
   }
 
   .menu-lists {
@@ -1230,7 +1326,14 @@ button {
     flex: none;
     order: 0;
     flex-grow: 0;
-  }
+    padding: 0 4rem;
+    margin-bottom: 0;
+    }
+
+    .nav-link {
+      font-size: 1.6rem;
+      font-weight: 400;
+    }
 
   .headline {
     display: flex;
@@ -1496,7 +1599,7 @@ button {
     margin-left: 50px;
   }
 
-  .menu-icon {
+  .nav-menu .icon {
     display: none;
   }
 }
