--- a/styles.css
+++ b/styles.css
@@ -34,16 +34,16 @@
 }
 
  .menu-item {
-  display: block;
-  position: fixed;
-  top: 5rem;
-  flex-direction: column;
-  width: 100%;
-  height: 80px;
-  left: -100%;
-  border-radius: 10px;
-  transition: 0.3s;
-  box-shadow: 0 10px 27px rgba(0, 0, 0, 0.05);
+    display: block;
+    position: fixed;
+    top: 5rem;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    left: -100%;
+    border-radius: 10px;
+    transition: 0.3s;
+    box-shadow: 0 10px 27px rgba(0, 0, 0, 0.05);
 }
 
 .menu-item.active {
