--- a/styles.css
+++ b/styles.css
@@ -1867,6 +1867,7 @@ h4 {
     align-items: center;
     right: 10px;
     bottom: auto;
+    left: 50%;
   }
 
   .modal-hdr-btn h4 {
@@ -1876,20 +1877,14 @@ h4 {
     font-size: 22px;
   }
 
-  .modal-hdr-btn {
-    display: flex;
-    flex-direction: column;
-  }
-
   .modal-title {
-    width: 500px;
+    right: 45%;
   }
 
   .modal-btns {
     width: 30%;
     display: flex;
     flex-direction: row;
-    
   }
 
   .modal-hdr-btn div button {
@@ -1902,7 +1897,7 @@ h4 {
     color: #344563;
     align-items: center;
     font-size: 16px;
-    font-family: 'inter',serif;
+    font-family: 'inter', serif;
   }
 
   .email-checker .error {
