--- a/styles.css
+++ b/styles.css
@@ -1493,8 +1493,8 @@ h4 {
   color: #ff3860;
   font-size: 20px;
   height: 25px;
-  bottom: 250px;
-  left: 150px;
+  bottom: 200px;
+  left: 60px;
   width: 360px;
   text-align: center;
 }
@@ -1903,7 +1903,8 @@ h4 {
   }
 
   .email-checker .error {
-    bottom: -20px;
-    left: 40%;
+    bottom: -40px;
+    margin-top: 20px;
+    left: 34%;
   }
 }
